# Logistics.ua

./: LICENSE  README.md  pyproject.toml
logistics/logistics/: asgi.py  example.env  settings.py  urls.py  wsgi.py
logistics/users/: models.py  urls.py
logistics/users/migrations/: 0001_initial.py
