[tool.poetry]
name = "logistics-ua"
version = "0.1.0"
description = ""
authors = ["SergiyBagmet <134723713+SergiyBagmet@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "logistics"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "==4.2.x"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
dj-rest-auth = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
